Archive2/20/44899b8662c7f3/output
+ g++ -std=c++11 -O -Wall -Wextra -pedantic -pthread main.cpp -c
main.cpp:1175:41: error: conversion from 'int' to non-scalar type 'PowerSet<meta::list<int, char, double> > {aka meta::list<meta::list<>, meta::list<double>, meta::list<char>, meta::list<char, double>, meta::list<int>, meta::list<int, double>, meta::list<int, char>, meta::list<int, char, double> >}' requested
 PowerSet<Pack<int, char, double>> foo = 42;
                                         ^
